--- a/ex06-01.css
+++ b/ex06-01.css
@@ -170,14 +170,14 @@ h1 {
 	padding-bottom: 25px;
 }
 h2 {
+	border-left-color: #F00;
+	border-left-style: solid;
+	border-right-width: 5px;
 	font-size: 16px;
 	color: #F00;
 	margin-top: 15px;
 	margin-bottom: 20px;
 	padding-left: 10px;
-	border-left-width: 5px;
-	border-left-style: solid;
-	border-left-color: #F00;
 }
 h3 {
 	font-size: 16px;
